// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component matched Table responsiveXl bordered 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
  border: 1px solid #e2e6ea;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

.c1 th,
.c1 td {
  border: 1px solid #e2e6ea;
}

.c1 thead th,
.c1 thead td {
  border-bottom-width: 2px;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (max-width:1199.98px) {
  .c1 {
    display: block;
    width: 100%;
    overflow-x: auto;
    border: 0;
  }
}

<table
  class="sc-fzoLag c0 c1"
/>
`;

exports[`Table component matches Table 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<table
  class="sc-fzoLag c0 c1"
/>
`;

exports[`Table component matches Table bordered 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
  border: 1px solid #e2e6ea;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

.c1 th,
.c1 td {
  border: 1px solid #e2e6ea;
}

.c1 thead th,
.c1 thead td {
  border-bottom-width: 2px;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<table
  class="sc-fzoLag c0 c1"
/>
`;

exports[`Table component matches Table hover 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

.c1 tbody tr:hover {
  background-color: rgba(0,0,0,0.25);
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<table
  class="sc-fzoLag c0 c1 hover"
/>
`;

exports[`Table component matches Table responseSm bordered 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
  border: 1px solid #e2e6ea;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

.c1 th,
.c1 td {
  border: 1px solid #e2e6ea;
}

.c1 thead th,
.c1 thead td {
  border-bottom-width: 2px;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (max-width:575.98px) {
  .c1 {
    display: block;
    width: 100%;
    overflow-x: auto;
    border: 0;
  }
}

<table
  class="sc-fzoLag c0 c1"
/>
`;

exports[`Table component matches Table responsive bordered 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
  border: 1px solid #e2e6ea;
  display: block;
  width: 100%;
  overflow-x: auto;
  border: 0;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

.c1 th,
.c1 td {
  border: 1px solid #e2e6ea;
}

.c1 thead th,
.c1 thead td {
  border-bottom-width: 2px;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<table
  class="sc-fzoLag c0 c1"
/>
`;

exports[`Table component matches Table responsiveLg bordered 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
  border: 1px solid #e2e6ea;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

.c1 th,
.c1 td {
  border: 1px solid #e2e6ea;
}

.c1 thead th,
.c1 thead td {
  border-bottom-width: 2px;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (max-width:991.98px) {
  .c1 {
    display: block;
    width: 100%;
    overflow-x: auto;
    border: 0;
  }
}

<table
  class="sc-fzoLag c0 c1"
/>
`;

exports[`Table component matches Table responsiveMd bordered 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
  border: 1px solid #e2e6ea;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

.c1 th,
.c1 td {
  border: 1px solid #e2e6ea;
}

.c1 thead th,
.c1 thead td {
  border-bottom-width: 2px;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (max-width:767.98px) {
  .c1 {
    display: block;
    width: 100%;
    overflow-x: auto;
    border: 0;
  }
}

<table
  class="sc-fzoLag c0 c1"
/>
`;

exports[`Table component matches Table small 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

.c1 th,
.c1 td {
  padding: 0.3rem;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<table
  class="sc-fzoLag c0 c1"
/>
`;

exports[`Table component matches Table tableDark bordered striped hover 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
  border: 1px solid #e2e6ea;
  color: #fff;
  background-color: #2d2f31;
  border: 0;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

.c1 th,
.c1 td {
  border: 1px solid #e2e6ea;
}

.c1 thead th,
.c1 thead td {
  border-bottom-width: 2px;
}

.c1 tbody tr:nth-of-type(odd) {
  background-color: rgba(0,0,0,0.1);
}

.c1 tbody tr:hover {
  background-color: rgba(0,0,0,0.25);
}

.c1 th,
.c1 td,
.c1 thead th {
  border-color: #212529;
}

.c1 tbody tr:nth-of-type(odd) {
  background-color: rgba(255,255,255,0.1);
}

.hover .c1 tbody tr:hover {
  background-color: rgba(255,255,255,0.1);
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<table
  class="sc-fzoLag c0 c1 hover"
/>
`;

exports[`Table component matches Table theadDark 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

.c1 thead th {
  color: #fff;
  background-color: #2d2f31;
  border-color: #212529;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<table
  class="sc-fzoLag c0 c1"
/>
`;

exports[`Table component matches Table theadLight 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

.c1 thead th {
  color: #343a40;
  background-color: #d6d8d9;
  border-color: #d6d8d9;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<table
  class="sc-fzoLag c0 c1"
/>
`;

exports[`Table component matches Tabled striped 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<table
  class="sc-fzoLag c0 c1"
/>
`;
